fix word wrap

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -97,6 +97,10 @@ form .progress {
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+.bare-window {
+  padding:0;
+  margin:0;
+}
 
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
