--- a/src/main/resources/static/css/sidemenu.css
+++ b/src/main/resources/static/css/sidemenu.css
@@ -128,6 +128,12 @@
   transition: all 1s ease;
 }
 
+ul .sub-menu {
+
+  margin-left: 30px;
+
+}
+
 /*.nav-side-menu ul .sub-menu li:before,
 .nav-side-menu li .sub-menu li:before {
   font-family: FontAwesome;
@@ -187,7 +193,7 @@
   font-family: "Font Awesome 5 Free"  !important;
   content: "\f70e"  !important;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   font-weight: 900;
@@ -199,7 +205,7 @@
   font-family: "Font Awesome 5 Brands"  !important;
   content: "\f3e2"  !important;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   font-weight: 900;
@@ -211,7 +217,7 @@
   font-family: "Font Awesome 5 Free"  !important;
   content: "\f518"  !important;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   font-weight: 900;
@@ -223,7 +229,7 @@
   font-family: "Font Awesome 5 Free"  !important;
   content: "\f1ad"  !important;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   font-weight: 900;
@@ -231,33 +237,11 @@
 }
 
 
-.host:before {
-  font-family: "Font Awesome 5 Free";
-  content: "\f1211";
-  display: inline-block; 
-  vertical-align: middle;
-  color: black;
-  font-weight: 900;
-  padding-left: 30px;
-  padding-right: 10px;
-}
-
-.process:before {
-  font-family: "Font Awesome 5 Free";
-  content: "\f121";
-  display: inline-block;
-  padding-left: 30px;
-  padding-right: 10px;
-  vertical-align: middle;
-  color: black;
-}
-
-
 .workflow:before {
   font-family: "Font Awesome 5 Brands"  !important;
   content: "\f18c";
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   font-weight: 900;
@@ -268,7 +252,7 @@
   font-family: "Font Awesome 5 Free";
   content: "\f07b";
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
   vertical-align: middle;
   color: black;
